# gadfit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  INSTALL.md  README.md  config.h.in  configure.txt  index.html  initial_cache.cmake  initial_cache.cmake.example  params.json
.github/: gnu_compiler_flags.cmake
.github/workflows/: main.yml
c++/gadfit/: CMakeLists.txt  automatic_differentiation.cpp  automatic_differentiation.h  cblas_wrapper.h  cblas_wrapper_fallback.cpp  cblas_wrapper_lapack.cpp  cblas_wrapper_mkl.cpp  exceptions.cpp  exceptions.h  fit_function.cpp  fit_function.h  gadfit_mpi.cpp  gadfit_mpi.h  gadfit_scalapack.cpp  gadfit_scalapack.h  gauss_kronrod_parameters.h  lapack.cpp  lapack.h  lapack_fallback.cpp  lapack_wrapper.cpp  lapack_wrapper_mkl.cpp  lm_solver.cpp  lm_solver.h  mpi.cpp  mpi.h  numerical_integration.cpp  numerical_integration.h  parallel.cpp  parallel.h  scalapack.cpp  scalapack.h  timer.cpp  timer.h
c++/tests/: CMakeLists.txt  ad_basic.cpp  ad_forward_mode.cpp  ad_reverse_mode.cpp  catch2_init.cpp  example.cpp  fixtures.h  lm_solver.cpp  lm_solver_data.h  mpi_basic.cpp  mpi_basic_data.h  mpi_communicators.cpp  numerical_integration.cpp  numerical_integration_data.h  scalapack.cpp  testing.h
cmake/: cmake_uninstall.cmake.in
cmake/modules/: FindAtlas.cmake  FindMKL.cmake  GADfitTools.cmake  Tools.cmake
cmake/tests/: Associate.f90  CoSum.f90  Coarrays.f90  Critical.f90  DefLenCharComp.f90  ImpureElemental.f90  Linalg.cpp  Linalg.f90  MKL.cpp  MPI.cpp  PolymAllocArray.f90  Scalapack.cpp
doc/: CMakeLists.txt  Readme.md  coding_rules.md  coding_rules.txt  physrev.bst  user_guide.tex
doc/robodoc/: README.md  Readme  robodoc.rc
doc/user_guide/: CMakeLists.txt  refs.bib  user_guide.tex
fortran/gadfit/: CMakeLists.txt  automatic_differentiation.F90  config.h.in  fitfunction.F90  gadf_constants.F90  gadfit.F90  gadfit_linalg.F90  gauss_kronrod_parameters.F90  messaging.f90  misc.F90  numerical_integration.F90
fortran/tests/: 1_gaussian.F90  1_gaussian_data.F90  2_integral_single.F90  2_integral_single_data  2_integral_single_data.F90  3_integral_double.F90  3_integral_double_data  3_integral_double_data.F90  4_multiple_curves.F90  4_multiple_curves_data.F90  4_multiple_data.F90  4_multiple_data_data.F90  CMakeLists.txt  ad_forward_mode.F90  ad_reverse_mode.F90  example.F90  function_template.f90  lapack-fallback.f  testing.F90
src/: CMakeLists.txt  abbrevs  automatic_differentiation.F90  automatic_differentiation.f90  fitfunction.F90  fitfunction.f90  gadf_constants.f90  gadfit.F90  gadfit.f90  gadfit_linalg.F90  gadfit_linalg.f90  gauss_kronrod_parameters.f90  linalg.f90  messaging.f90  misc.F90  misc.f90  numerical_integration.f90
tests/: 1_gaussian.F90  1_gaussian.f90  1_gaussian_data  2_integral_single.f90  3_integral_double.F90  3_integral_double.f90  CMakeLists.txt  example.F90  example.f90  example_data1  example_data2  function_template  lapack-fallback.f
